// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Close preview component should render correctly empty 1`] = `
<div
  className="sc-bdVaJa eVCzwl"
>
  <styled.div
    column={true}
  >
    <WithStyles />
  </styled.div>
</div>
`;

exports[`Close preview component should render correctly image options 1`] = `
<div
  className="sc-bdVaJa eVCzwl"
>
  <styled.div
    column={true}
  >
    <WithStyles>
      <styled.div
        key="1"
      >
        <WithStyles
          checkedIcon={<ShouldUpdate />}
          icon={<ShouldUpdate />}
          style={
            Object {
              "alignSelf": "center",
              "cursor": "pointer",
              "display": "table",
              "height": "auto",
              "overflow": "visible",
              "position": "relative",
              "width": "auto",
            }
          }
        />
        <styled.div>
          <LazyLoad
            offset={0}
            once={false}
            overflow={false}
            resize={false}
            scroll={true}
            unmountIfInvisible={false}
          >
            <styled.img
              alt="foo"
              src="foo"
            />
          </LazyLoad>
        </styled.div>
      </styled.div>
    </WithStyles>
    <styled.div
      column={true}
      grow={true}
    >
      <TextField
        fullWidth={true}
        onChange={[Function]}
        required={false}
        select={false}
        value=""
      />
      <TextFieldComent
        alignRight={true}
        error={false}
        label="0 z 1500 znaků"
      />
    </styled.div>
  </styled.div>
</div>
`;

exports[`Close preview component should render correctly normal options 1`] = `
<div
  className="sc-bdVaJa eVCzwl"
>
  <styled.div
    column={true}
  >
    <WithStyles>
      <WithStyles
        control={
          <WithStyles
            checkedIcon={<ShouldUpdate />}
            icon={<ShouldUpdate />}
          />
        }
        key="1"
        label="foo"
      />
    </WithStyles>
    <styled.div
      column={true}
      grow={true}
    >
      <TextField
        fullWidth={true}
        onChange={[Function]}
        required={false}
        select={false}
        value=""
      />
      <TextFieldComent
        alignRight={true}
        error={false}
        label="0 z 1500 znaků"
      />
    </styled.div>
  </styled.div>
</div>
`;

exports[`Close preview component should render correctly open option 1`] = `
<div
  className="sc-bdVaJa eVCzwl"
>
  <styled.div
    column={true}
  >
    <WithStyles>
      <WithStyles
        control={
          <WithStyles
            checkedIcon={<ShouldUpdate />}
            icon={<ShouldUpdate />}
          />
        }
        key="1"
        label="foo"
      />
    </WithStyles>
    <styled.div
      column={true}
      grow={true}
    >
      <TextField
        fullWidth={true}
        onChange={[Function]}
        required={false}
        select={false}
        value=""
      />
      <TextFieldComent
        alignRight={true}
        error={false}
        label="0 z 1500 znaků"
      />
    </styled.div>
  </styled.div>
</div>
`;
